--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/NikhilAshodariya/personal_website#readme",
   "dependencies": {
+    "apollo-server": "^2.11.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
